#2684 - Java 21 Args