@@ -133,7 +133,7 @@
         <hibernate-orm.version>6.6.36.Final</hibernate-orm.version>
         <jackson-core.version>2.16.1</jackson-core.version>
         <auth0.version>4.5.0</auth0.version>
-        <chemistry-opencmis.version>1.1.0</chemistry-opencmis.version>
+<!--        <chemistry-opencmis.version>1.1.0</chemistry-opencmis.version>-->
         <servlet.version>6.0.0</servlet.version>
         <commons-collections4.version>4.5.0</commons-collections4.version>
         <commons-lang3.version>3.20.0</commons-lang3.version>
@@ -173,6 +173,7 @@
         <!-- Hazelcast -->
         <hazelcast.version>5.6.0</hazelcast.version>
         <spring-session-hazelcast.version>3.5.3</spring-session-hazelcast.version>
+        <cxf.version>4.0.3</cxf.version>
         <!-- Default authentication -->
         <leos.web.auth.method>BASIC</leos.web.auth.method>
     </properties>
@@ -281,40 +282,40 @@
 <!--                <scope>runtime</scope>-->
 <!--            </dependency>-->
             <!-- Apache Chemistry framework -->
-            <dependency>
-                <groupId>org.apache.chemistry.opencmis</groupId>
-                <artifactId>chemistry-opencmis-client-api</artifactId>
-                <version>${chemistry-opencmis.version}</version>
-                <scope>compile</scope>
-            </dependency>
-            <dependency>
-                <groupId>org.apache.chemistry.opencmis</groupId>
-                <artifactId>chemistry-opencmis-client-impl</artifactId>
-                <version>${chemistry-opencmis.version}</version>
-                <scope>runtime</scope>
-                <exclusions>
-                    <exclusion>
-                        <groupId>asm</groupId>
-                        <artifactId>asm</artifactId>
-                    </exclusion>
-                </exclusions>
-            </dependency>
-            <dependency>
-                <groupId>org.apache.chemistry.opencmis</groupId>
-                <artifactId>chemistry-opencmis-commons-api</artifactId>
-                <version>${chemistry-opencmis.version}</version>
-            </dependency>
-            <dependency>
-                <groupId>org.apache.chemistry.opencmis</groupId>
-                <artifactId>chemistry-opencmis-commons-impl</artifactId>
-                <version>${chemistry-opencmis.version}</version>
-                <scope>runtime</scope>
-            </dependency>
-            <dependency>
-                <groupId>org.apache.chemistry.opencmis</groupId>
-                <artifactId>chemistry-opencmis-client-bindings</artifactId>
-                <version>${chemistry-opencmis.version}</version>
-            </dependency>
+<!--            <dependency>-->
+<!--                <groupId>org.apache.chemistry.opencmis</groupId>-->
+<!--                <artifactId>chemistry-opencmis-client-api</artifactId>-->
+<!--                <version>${chemistry-opencmis.version}</version>-->
+<!--                <scope>compile</scope>-->
+<!--            </dependency>-->
+<!--            <dependency>-->
+<!--                <groupId>org.apache.chemistry.opencmis</groupId>-->
+<!--                <artifactId>chemistry-opencmis-client-impl</artifactId>-->
+<!--                <version>${chemistry-opencmis.version}</version>-->
+<!--                <scope>runtime</scope>-->
+<!--                <exclusions>-->
+<!--                    <exclusion>-->
+<!--                        <groupId>asm</groupId>-->
+<!--                        <artifactId>asm</artifactId>-->
+<!--                    </exclusion>-->
+<!--                </exclusions>-->
+<!--            </dependency>-->
+<!--            <dependency>-->
+<!--                <groupId>org.apache.chemistry.opencmis</groupId>-->
+<!--                <artifactId>chemistry-opencmis-commons-api</artifactId>-->
+<!--                <version>${chemistry-opencmis.version}</version>-->
+<!--            </dependency>-->
+<!--            <dependency>-->
+<!--                <groupId>org.apache.chemistry.opencmis</groupId>-->
+<!--                <artifactId>chemistry-opencmis-commons-impl</artifactId>-->
+<!--                <version>${chemistry-opencmis.version}</version>-->
+<!--                <scope>runtime</scope>-->
+<!--            </dependency>-->
+<!--            <dependency>-->
+<!--                <groupId>org.apache.chemistry.opencmis</groupId>-->
+<!--                <artifactId>chemistry-opencmis-client-bindings</artifactId>-->
+<!--                <version>${chemistry-opencmis.version}</version>-->
+<!--            </dependency>-->
             <!-- Libraries -->
             <dependency>
                 <groupId>jakarta.servlet</groupId>
@@ -630,6 +631,26 @@
                 <artifactId>jackson-core</artifactId>
                 <version>${jackson-core.version}</version>
             </dependency>
+            <dependency>
+                <groupId>org.apache.cxf</groupId>
+                <artifactId>cxf-core</artifactId>
+                <version>${cxf.version}</version>
+            </dependency>
+            <dependency>
+                <groupId>org.apache.cxf</groupId>
+                <artifactId>cxf-rt-transports-http</artifactId>
+                <version>${cxf.version}</version>
+            </dependency>
+            <dependency>
+                <groupId>org.apache.cxf</groupId>
+                <artifactId>cxf-rt-ws-policy</artifactId>
+                <version>${cxf.version}</version>
+            </dependency>
+            <dependency>
+                <groupId>org.apache.cxf</groupId>
+                <artifactId>cxf-rt-frontend-jaxws</artifactId>
+                <version>${cxf.version}</version>
+            </dependency>
         </dependencies>
     </dependencyManagement>
 
@@ -781,9 +802,6 @@
                             --add-opens java.base/sun.nio.ch=ALL-UNNAMED
                             --add-opens java.base/sun.security.util=ALL-UNNAMED
                             --add-opens java.xml/com.sun.org.apache.xerces.internal.jaxp=ALL-UNNAMED
-                            --add-exports=jdk.xml.dom/org.w3c.dom.html=ALL-UNNAMED
-                            --add-exports=java.xml/com.sun.org.apache.xerces.internal.impl.xs=ALL-UNNAMED
-                            --add-opens java.base/java.util.concurrent=ALL-UNNAMED
                         </argLine>
                         <systemPropertyVariables>
                             <powermock.classloading>javagent</powermock.classloading>
